ADD: Linter (black) ADD: Run_all ADD: Linter and all to setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,10 +13,15 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-packages = find:
+packages = .
 python_requires = >= 3.7
 include_package_date = True
 
 [options.packages.find]
 exclude =
     test/*
+
+[options.entry_points]
+console_scripts =
+    fixup = dafixup:run_all
+    fixup_lint = dafixup:run_lint
