--- a/setup.cfg
+++ b/setup.cfg
@@ -24,4 +24,5 @@ exclude =
 [options.entry_points]
 console_scripts =
     fixup = dafixup:run_all
+    fixup_imports = dafixup:run_import_sort
     fixup_lint = dafixup:run_lint
