ADD: Type checking (mypy)

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,3 +26,4 @@ console_scripts =
     fixup = dafixup:run_all
     fixup_imports = dafixup:run_import_sort
     fixup_lint = dafixup:run_lint
+    fixup_typecheck = dafixup:run_typechecking
