--- a/setup.cfg
+++ b/setup.cfg
@@ -26,4 +26,5 @@ console_scripts =
     fixup = dafixup:run_all
     fixup_imports = dafixup:run_import_sort
     fixup_lint = dafixup:run_lint
+    fixup_req = dafixup:run_requirement_generation
     fixup_typecheck = dafixup:run_typechecking
